fixing interactive spacings

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -1934,6 +1934,7 @@ body {
 
 .outer {
   .interactive-credit {
+    padding: 5px 0;
     @media @mobile {
       padding: 10px 0;
     }
@@ -1952,5 +1953,5 @@ body {
 .tabletshow {
   @media screen and (min-width: 769px) {
     display: none;
-  } 
+  }
 }
