--- a/src/css/sfchronicle.less
+++ b/src/css/sfchronicle.less
@@ -150,12 +150,17 @@ li {
 }
 .outer {
   max-width: 900px;
-  margin: 30px auto;
+  margin: 50px auto;
   @media @tablet {
     margin: 20px;
   }
   @media @mobile {
     margin: 10px;
+  }
+}
+.outer-slider {
+  @media @tablet {
+    margin: 20px auto;
   }
 }
 .source, .interactive-credit {
